# fastapi_something

./: README.md  app.py  config.py  passenger_wsgi.py  pyproject.toml  requirements.txt
.github/workflows/: fastapi_something_smallhost.yml
app/: __init__.py  config.py  routes.py
fastapi_something/: __init__.py  config.py  routes.py
fastapi_something/helpers/: camera_helper.py  mongodb_helper.py
fastapi_something/scripts/: basic.py
fastcamapi/: __init__.py  config.py  routes.py
fastcamapi/helpers/: camera_helper.py
helpers/: camera_helper.py  mongodb_helper.py
route_helpers/: camera.py  capture_video.py
scripts/: basic.py
