[build-system]
requires = ["setuptools==70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fastapi_something*"]

[project]
name = "fastapi_something"
version = "0.0.1"
authors = [
  { name="Kamil" },
]
description = "Testing fastapi on small"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'setuptools==70.0',
    'fastapi',
    'uvicorn',
    'opencv-python',
    'starlette',
    'python-dotenv',
    'itsdangerous',
    'authlib',
    'httpx',
    'motor',
]

[project.urls]
"Homepage" = "https://github.com/kami2/fastapi_something"
